--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
             <h1>Welcome to my page.</h1>
             <h2>My Skills</h2>
             <ol>
-              <l1>Python</l1>
-              <l1>C_programing</l1>
-              <l1>Java</l1>
-              <l1>Quantum_Computing</l1>
+              <li>Python</li>
+              <li>C_programing</li>
+              <li>Java</li>
+              <li>Quantum_Computing</li>
             </ol>
       </body>
 </html>
