--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
             <title>
                     About Bhagyadarshan
             </title>
+            <link rel="stylesheet" href="mystyle.css">
       </head>
       <body>
             <h1>Welcome to my page.</h1>
