--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             <h1>Welcome to my page.</h1>
             <h2>My Skills</h2>
             <ol>
+              <img src=
+"https://github.com/Bhagyadarshanpatil/about_me/blob/main/albert_e.webp" 
+         alt="GFG image" />
               <li>Python</li>
               <li>C_programing</li>
               <li>Java</li>
